fixed some more of the the spacing and fixed a problem with contact-me and flex

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,18 +66,20 @@ margin-bottom: 5px;
 .FirstWork img{
 width: 600px; 
 height: 400px;
+margin-top: 5px; 
 
 }
 
 .RestofWork img{
 width: 200px; 
 height: 200px; 
+margin-top: 5px;
+float: left;  
 }
 
 .RestofWork {
-display: flex; 
-
-}
+display: flex;
+} 
 
 .otherworkitems {
 flex: 33.33%; 
